--- a/withDB/docker-compose.yml
+++ b/withDB/docker-compose.yml
@@ -7,30 +7,28 @@ services:
     ports:
       - "9000:80"
     links:
-      - wordpress-mysql
+      - wordpress-postgres
     restart: always
     environment:
-      WORDPRESS_DB_HOST: wordpress-mysql:3306
-      WORDPRESS_DB_USER: user
-      WORDPRESS_DB_PASSWORD: mysql
-      WORDPRESS_DB_NAME: usanikki_wp1
+      WORDPRESS_DB_HOST: postgres:5432
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: postgres
+      WORDPRESS_DB_NAME: wordpress
     volumes:
       - wordpress-files:/var/www/html
 
-  wordpress-mysql:
-    image: llasuka/mysql
+  wordpress-postgres:
+    image: postgres
     volumes:
-      - main-wordpress-db:/var/lib/mysql
-    environment:
-      MYSQL_DATABASE: usanikki_wp1
-      MYSQL_PASSWORD: mysql
-      MYSQL_ROOT_PASSWORD: mysql
-      MYSQL_USER: user
+      - wordpress-db:/var/lib/postgresql/data
     restart: always
-
+    environment:
+      POSTGRES_DB: wordpress
+      POSTGRES_PASSWORD: wordpress
+      POSTGRES_USER: wordpress
 volumes:
   wordpress-files:
     external: true
-  main-wordpress-db:
+  wordpress-db:
     external: true
 
